# bfjvm-rewrite

./: Cargo.toml
src/: errors.rs  get.rs  install.rs  main.rs  project_dirs.rs  uninstall.rs
src/init/: cmd.rs
src/types/: java.rs
